# AlphaESCTelemetry

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  SerialAlpha-2022-10-27T16-08-29.csv  alphaTelemetry.py  captureESCTelemetry.py  decodeESCTelemetry.py  decode_bin_log_telemetry.py  escTransport.py  plot_csv_telemetry.py  pyproject.toml  serial_ESC_Alpha_to_bin.py  serial_ESC_Alpha_to_csv.py  setup.py
AlphaESCTelemetry/: alphaTelemetry.py  captureESCTelemetry.py  decodeESCTelemetry.py  plot_csv_telemetry.py  plot_export_telemetry.py  plot_telemetry.py  replay_telemetry.py  serial_ESC_Alpha_to_csv.py
AlphaESCTelemtry/: captureESCTelemetry.py  decodeESCTelemetry.py  plot_csv_telemetry.py  replay_telemetry.py  serial_ESC_Alpha_to_csv.py
experiments/: eff_current.py  test_norm.py  thrust_fitting.py  voltage_scale.py
